Feature/add api version (#4)
* Feature: Implement API versioning strategy and update controllers

- Added API versioning documentation in API_VERSIONING.md.
- Updated InventoryController to reflect the latest version in Swagger.
- Updated SystemController to indicate version 1 in Swagger.
- Created SystemControllerDefault for default endpoints.
- Implemented InventoryControllerV1 for versioned inventory management.
- Enhanced OpenApiConfiguration with versioning details and server information.
- Added integration tests for InventoryControllerV1.

* Feature: Add unit tests for InventoryRepository and InventoryController, update OpenAPI configuration, and enhance application test settings

* Feature: Update InventoryControllerTest to use new API endpoints and add ResourceConverter mock; create SystemControllerTest with connectivity and system info tests

* Feature: Add SystemControllerDefaultTest with system info and connectivity tests

* cohre: add test to infra layer

* Feature: Add environment variable configuration for Docker and update docker-compose files

* Feature: Implement database seeding functionality and update configuration for seeding control

* Refactor Docker Compose configuration to use default network and update network name for inventory API service

* Feature: Add comprehensive database setup guide, initialization scripts, and enhance database seeding logic

* Refactor database setup instructions and remove obsolete setup scripts

* Fix: Update development server URL in OpenAPI configuration

* Fix: Update product API endpoints to use versioning in URI

* Fix: Update README and API_VERSIONING documentation for English localization and clarity